fixed to collapsed by default issue

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -21,7 +21,7 @@
   height: 250px;
   overflow: hidden;
   text-align: center;
-  margin: 5px 5px 5px 5px;
+  margin: 6px auto;
   border-radius: 15px;
 }
 .card-img {
